sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:2: error: Missing closing brace `}' assumed here
def gnomeSort() {
^AlgGnomeSort:2: error: expected class or object definition
def gnomeSort() {
^